# chatgpt-mcp

./: .gitignore  LICENSE  README.md  chatgpt_automation.py  chatgpt_mcp.py  mcp_tools.py  pyproject.toml
chatgpt_mcp/: __init__.py  __main__.py  button_helper.py  chatgpt_automation.py  chatgpt_mcp.py  improved_extraction.py  mcp_tools.py
utils/: clipboard_utils.py
