[project]
name = "chatgpt-mcp-plus"
version = "1.0.0"
description = "Enhanced MCP server for ChatGPT with dynamic button detection and improved response handling"
readme = "README.md"
authors = [
    { name = "Ben Sarmiento", email = "yowmamasita@gmail.com" },
    { name = "Joon Hwan 김준환", email = "xncbf12@gmail.com" }
]
license = {text = "MIT"}
keywords = ["mcp", "chatgpt", "automation", "macos", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.54",
]

[project.urls]
Homepage = "https://github.com/yowmamasita/chatgpt-mcp"
Repository = "https://github.com/yowmamasita/chatgpt-mcp"
Issues = "https://github.com/yowmamasita/chatgpt-mcp/issues"
"Original Project" = "https://github.com/xncbf/chatgpt-mcp"

[project.scripts]
chatgpt-mcp-plus = "chatgpt_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatgpt_mcp"]
